--- a/bob.html
+++ b/bob.html
@@ -1,2 +1,10 @@
 
-<imsrc = "https://images.thebrag.com/tb/uploads/2021/02/bob-the-builder-yes-768x506.jpg" width=100% height=100%>
+<!DOCTYPE html>
+<html>
+<title>Bob.com</title>
+<head>
+</head>
+<body>
+<img src = "https://images.thebrag.com/tb/uploads/2021/02/bob-the-builder-yes-768x506.jpg" width=100% height=100%>
+</body>
+</html>
